--- a/world-development-indicators.ipynb
+++ b/world-development-indicators.ipynb
@@ -2746,7 +2746,7 @@
     "tags": []
    },
    "source": [
-    "### Question: What is the indivitual level and the average level of CO2 emissions per capita by European and Central Asian countries?"
+    "### Question: What is the individual level and the average level of CO2 emissions per capita by European and Central Asian countries?"
    ]
   },
   {
